--- a/index.html
+++ b/index.html
@@ -2,9 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/TillTech.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TillTech</title>
+    <title>TillTech - Das #1 IT-Abo für Agenturen, Startups und Unternehmer.</title>
+    <meta name="description" content="Das #1 IT-Abo für Agenturen, Startups und Unternehmer.">
+    <meta name="keywords" content="Marketing, Development, Grafik Design, Content Creation">
+    <meta name="author" content="TillTech">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://www.tilltech.ch/">
+    <meta property="og:title" content="TillTech">
+    <meta property="og:description" content="Das #1 IT-Abo für Agenturen, Startups und Unternehmer.">
+    <meta property="og:image" content="/Branding/TillTech.webp">
+    <meta property="og:url" content="https://www.tilltech.ch/">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "TillTech",
+        "url": "https://www.tilltech.ch/",
+        "logo": "/Branding/TillTech.webp"
+      }
+    </script>
   </head>
   <body class="font-body">
     <div id="app"></div>
