--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/TillTech.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TillTech - Das #1 IT-Abo für Agenturen, Startups und Unternehmer.</title>
+    <title>TillTech - IT im Abo</title>
     <meta name="description" content="Das #1 IT-Abo für Agenturen, Startups und Unternehmer.">
     <meta name="keywords" content="Marketing, Development, Grafik Design, Content Creation">
     <meta name="author" content="TillTech">
